--- a/src/main/webapp/i18n/fr/home.json
+++ b/src/main/webapp/i18n/fr/home.json
@@ -1,7 +1,7 @@
 {
     "home": {
         "title": "Bienvenue à la bijouterie Jador !",
-        "subtitle": "Ceci est votre page d'accueil",
+        "subtitle": "",
         "logged": {
             "message": "Vous êtes connecté en tant que \"{{username}}\"."
         }
